--- a/testForm.css
+++ b/testForm.css
@@ -1,3 +1,10 @@
+/* #mc_embed_signup {
+    background:#fff; 
+    clear:left; 
+    font:14px Helvetica,Arial,sans-serif; 
+} */
+
+
 #mc_embed_signup{
     background:#fff; 
     clear:left; 
