--- a/index.css
+++ b/index.css
@@ -77,5 +77,9 @@ select {
 } 
 
 
+.carousel-item img{
+    height: 400px;
+}
+
 /* /////////// */
 #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
