--- a/index.css
+++ b/index.css
@@ -83,3 +83,7 @@ select {
 
 /* /////////// */
 #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+
+h1{
+    text-align: center;
+}
