--- a/index.css
+++ b/index.css
@@ -83,3 +83,17 @@ select {
 
 /* /////////// */
 #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+
+
+/* //// background image */
+.backImage{
+    background-image: url("./images/.png");
+    height: 100vh;
+   
+}
+
+#stylingText{
+    font-family: 'Quicksand', sans-serif; 
+    padding-top: 33px;
+
+}
