updated letter spacing for the nav

--- a/index.css
+++ b/index.css
@@ -176,6 +176,14 @@ article h3 {
         margin-top:50px;
     }
 
+     .nav-link{
+        font-weight: 500;
+        font-size: 14px;
+        padding-right: 50px;
+    }
+    .navbar-light .navbar-nav .active>.nav-link{
+        padding-right: 50px;
+    }
    
 
     .social-links a {
