--- a/index.css
+++ b/index.css
@@ -143,6 +143,7 @@ input[type="submit"]:hover {
     font-family: 'Quicksand', sans-serif;
     font-weight: bold;
     margin-bottom: 20px;
+    font-size: 15px;
 }
 
 article p {
